# Rust-Project

./: Cargo.toml  diesel.toml  docker-compose.yml
src/: config.rs  main.rs  routes.rs
src/health/: health.rs
src/models/: game.rs
