[package]
name = "rust_project"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
actix-cors = "0.7.0"
env_logger = "0.11.5"
dotenv = "0.15"
diesel = { version = "2.2.2", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
log = "0.4.22"